# minichess

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  ChessBoard  Doxyfile  Makefile  README.md  echecs
.github/workflows/: gh-pages.yml
doc/: MiniChess.md
docs/: MiniChess.md
include/: board.hpp  game.hpp  piece.hpp  player.hpp  position.hpp
src/: board.cpp  board.hpp  game.cpp  game.hpp  main.cpp  piece.cpp  piece.hpp  player.cpp  player.hpp  position.cpp  position.hpp
tests/: test-level.sh
tests/data/: 1-ill-bishop-1.txt  1-ill-diagonal-obstacle.txt  1-ill-knight-1.txt  1-ill-line-obstacle.txt  1-ill-pawn-1.txt  1-ill-rook-1.txt  1-leg-bish-knight.txt  1-leg-bishop-1.txt  1-leg-knight-1.txt  1-leg-obstacle.txt  1-leg-pawn-1.txt  2-ill-chess-1.txt  2-ill-move-after-chess.txt  2-leg-chess-1.txt  2-leg-chess-2.txt  3-ill-kside-castling-1.txt  3-ill-kside-castling-2.txt  3-ill-pawn-passing-1.txt  3-ill-pawn-passing-2.txt  3-ill-pawn-passing-3.txt  3-ill-qside-castling-1.txt  3-ill-qside-castling-2.txt  3-leg-kside-castling-1.txt  3-leg-kside-castling-2.txt  3-leg-kside-castling-king-move.txt  3-leg-pawn-passing.txt  3-leg-promo-bbishop.txt  3-leg-promo-bknight.txt  3-leg-promo-bqueen.txt  3-leg-promo-brook.txt  3-leg-promo-wbishop.txt  3-leg-promo-wknight.txt  3-leg-promo-wqueen-mat.txt  3-leg-promo-wqueen.txt  3-leg-promo-wrook.txt  3-leg-qside-castling-1.txt  3-leg-qside-castling-2.txt  3-leg-qside-castling-3.txt  4-leg-mat-1.txt  4-leg-mat-berger.txt  (+4 more)
